--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h4>Salom bu mening 1chi proektim googledagi </h4>
+  <h4>Salom bu mening 1chi proektim googledagi 
+    nimadur
+  </h4>
 </body>
 </html>
